# n-vibe-cluster-api

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  model_definition.py  pyproject.toml  requirements.txt
api/: main.py
api/app/config/: biped_hq.yaml  mairie_xx.yaml
api/app/models/: data_models.py
api/app/models/weights/biped_hq/: cluster.pickle
api/app/models/weights/mairie_xx/: cluster.pickle  cluster_15032024.pickle  cluster_15032024_2.pickle
api/app/routes/: biped.py  mairie_xx.py
api/app/test/: biped_hq.py  mairie_xx.py
api/app/utils/: data_processing.py  model.py  utils.py
app/models/: data_models.py  model.py
app/routes/: biped.py
app/utils/: data_processing.py
