[tool.poetry]
name = "n-vibe-cluster-api"
version = "0.1.0"
description = ""
authors = ["Leo <leo@n-vibe.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
loguru = "^0.7.2"
pandas = "^2.2.0"
numpy = "^1.26.4"
joblib = "^1.3.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.4.0"
pydantic = "^2.6.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
